--- a/Examples/Marker Detection Without Aruko/markers.ipynb
+++ b/Examples/Marker Detection Without Aruko/markers.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "image = cv.imread(\"../data/images/markers.jpg\")\n",
+    "image = cv.imread(\"../Images/markers.jpg\")\n",
     "\n",
     "show_image(image)"
    ]
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
